# fun-coding

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json  post-create.sh
ai-service/: Dockerfile  main.py  pyproject.toml
ai-service/app/: web_server.py
ai-service/app/middlewares/: context.py  logger.py
ai-service/config/: config.yaml
ai-service/dependencies/: config.py  context.py  logger.py
ai-service/routers/: api_chat_history.py  ui.py
ai-service/scripts/: pytrial_example.py
ai-service/services/: chat_history.py  default_agent.py
ai-service/services/aicrew/: manager.py
ai-service/templates/: index.html  script.js  style.css
appium/appium-testng/: pom.xml
appium/appium-with-aws/: .gitignore  README.md  pom.xml
appium/first-appium-project/: pom.xml
blockchain/mychain/: Makefile  README.md  go.mod  go.sum  main.go
golang/basics/: Makefile
golang/cobra-viper/: LICENSE  config.yaml  go.mod  main.go
golang/consul-lock/: c.go  go.mod  go.sum
golang/containers-library-use/: minHeapWithStruct.go
golang/d5-cobra-viper/: main.go
golang/d6-cobra-viper-continued/: main.go
golang/d7-binary-search-tree/: main.go
golang/gin/: go.mod  playbook.http  server.go
golang/gossip-protocol/: d.go  go.mod  go.sum  initCluster.go  joinCluster.go  m.go  main.go
kustomize/: good-article-on-kustomization.md
python/poc-fast-api/: main.py  models.py  pyproject.toml
python/poc-fast-api/web/css/: styles.css
python/poc-fast-api/web/html/: index.html
react/: topics-covered-in-apps.txt
svg/: index.html  script.js  style.css
(+273 files in other folders)
