[tool.poetry]
name = "poc-fast-api"
version = "0.1.0"
description = "POC on fast api"
authors = ["parthw <wparth777@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.5"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
